--- a/SchoolWeb/Views/Account/RegisterUser.cshtml
+++ b/SchoolWeb/Views/Account/RegisterUser.cshtml
@@ -1,17 +1,29 @@
-﻿@model SchoolWeb.Models.RegisterStudentViewModel
+﻿@model SchoolWeb.Models.RegisterUserViewModel
 @{
-    ViewData["Title"] = "Register Student";
+    ViewData["Title"] = "Register User";
 }
 
 <br>
 <br>
-<h3 class="text-center">Register Student</h3>
+<h3 class="text-center">Register User</h3>
 <br>
 <br>
 <div class="row">
     <div class="col-md-12 offset-md-2">
         <form method="post" enctype="multipart/form-data">
             <div class="container">
+                <div class="row">
+                    <div class="form-group col-md-4 span6">
+                        <label asp-for="RoleId" class="control-label"></label>
+                        <select asp-for="RoleId" asp-items="Model.Roles" class="form-control"></select>
+                        <span asp-validation-for="RoleId" class="text-danger small"></span>
+                    </div>
+                    <div class="form-group col-md-4 span6">
+                        <label asp-for="ProfilePictureFile" class="control-label"></label>
+                        <input asp-for="ProfilePictureFile" class="form-control" type="file" accept="image/*" />
+                        <span asp-validation-for="ProfilePictureFile" class="text-danger small"></span>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="form-group col-md-4 span6">
                         <label asp-for="FirstName">First Name</label>
@@ -89,27 +101,13 @@
                         <span asp-validation-for="Confirm" class="text-danger small"></span>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="form-group col-md-4 span6">
-                        <label asp-for="PictureFile" class="control-label"></label>
-                        <input asp-for="PictureFile" class="form-control" type="file" accept="image/*" />
-                        <span asp-validation-for="PictureFile" class="text-danger small"></span>
-                    </div>
-                    <div class="form-group col-md-4 span6 align-self-end">
-                        <div class="form-check">
-                            <input asp-for="UseAsProfilePic" type="checkbox" class="form-check-input" />
-                            <label asp-for="UseAsProfilePic" class="form-check-label">Use as profile picture?</label>
-                        </div>
-                        <span asp-validation-for="UseAsProfilePic" class="text-danger small"></span>
-                    </div>
-                </div>
             </div>
             <br>
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 offset-md-2">
                         <div class="form-group text-center">
-                            <input type="submit" value="Register Student" class="btn btn-secondary" />
+                            <input type="submit" value="Register User" class="btn btn-secondary" />
                         </div>
                         <div class="text-danger text-center mr-4" asp-validation-summary="ModelOnly"></div>
                     </div>
