Edit user profile, reset and recover password

--- a/SchoolWeb/Views/Account/RegisterUser.cshtml
+++ b/SchoolWeb/Views/Account/RegisterUser.cshtml
@@ -117,7 +117,7 @@
     </div>
 </div>
 <br>
-<div class="text-success text-center">
+<div class="text-danger text-center">
     <p>
         @Html.Raw(ViewBag.Message)
     </p>
