--- a/SchoolWeb/Views/Shared/Error.cshtml
+++ b/SchoolWeb/Views/Shared/Error.cshtml
@@ -17,7 +17,7 @@ else
 {
     <br>
     <br>
-    <h3 class="text-center">@ViewBag.ErrorTitle</h3>
+    <h3 class="text-center text-danger">@ViewBag.ErrorTitle</h3>
     <br>
     <div>
         <p class="text-center">@Html.Raw(ViewBag.ErrorMessage)</p>
