--- a/SchoolWeb/Views/Account/EditProfile.cshtml
+++ b/SchoolWeb/Views/Account/EditProfile.cshtml
@@ -1,15 +1,30 @@
-﻿@model SchoolWeb.Models.RegisterStudentViewModel
+﻿@model SchoolWeb.Models.EditProfileViewModel
 @{
-    ViewData["Title"] = "Register Student";
+    ViewData["Title"] = "Edit Profile";
 }
 
 <br>
 <br>
-<h3 class="text-center">Register Student</h3>
+<h3 class="text-center">Edit Profile</h3>
 <br>
 <br>
 <div class="row">
     <div class="col-md-12 offset-md-2">
+        <div class="container">
+            <div class="row ">
+                <div class="form-group col-md-4 span6">
+                    <div class="col-md-8 mx-auto">
+                        <img src="@Url.Content(Model.ProfilePicturePath)" alt="Image" class="rounded-circle embed-responsive" style="width: 160px; height: 160px; max-height: 100%; width: auto;" />
+                    </div>
+                </div>
+                <div class="form-group col-md-4 span6 align-self-center">
+                    <h4 class="font-weight-normal">@Model.FirstName @Model.LastName</h4>
+                    <h6 class="font-weight-light">@Model.Email</h6>
+                    <h6 class="font-weight-light text-uppercase">@Model.Role</h6>
+                </div>
+            </div>
+        </div>
+        <br>
         <form method="post" enctype="multipart/form-data">
             <div class="container">
                 <div class="row">
@@ -72,44 +87,41 @@
                         <span asp-validation-for="PhoneNumber" class="text-danger small"></span>
                     </div>
                     <div class="form-group col-md-4 span6">
-                        <label asp-for="Email">Email</label>
-                        <input asp-for="Email" class="form-control" />
-                        <span asp-validation-for="Email" class="text-danger small"></span>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="form-group col-md-4 span6">
-                        <label asp-for="Password">Password</label>
-                        <input asp-for="Password" type="password" class="form-control" />
-                        <span asp-validation-for="Password" class="text-danger small"></span>
-                    </div>
-                    <div class="form-group col-md-4 span6">
-                        <label asp-for="Confirm">Confirm</label>
-                        <input asp-for="Confirm" type="password" class="form-control" />
-                        <span asp-validation-for="Confirm" class="text-danger small"></span>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="form-group col-md-4 span6">
-                        <label asp-for="PictureFile" class="control-label"></label>
-                        <input asp-for="PictureFile" class="form-control" type="file" accept="image/*" />
-                        <span asp-validation-for="PictureFile" class="text-danger small"></span>
-                    </div>
-                    <div class="form-group col-md-4 span6 align-self-end">
-                        <div class="form-check">
-                            <input asp-for="UseAsProfilePic" type="checkbox" class="form-check-input" />
-                            <label asp-for="UseAsProfilePic" class="form-check-label">Use as profile picture?</label>
-                        </div>
-                        <span asp-validation-for="UseAsProfilePic" class="text-danger small"></span>
+                        <label asp-for="ProfilePictureFile" class="control-label"></label>
+                        <input asp-for="ProfilePictureFile" class="form-control" type="file" accept="image/*" />
+                        <span asp-validation-for="ProfilePictureFile" class="text-danger small"></span>
                     </div>
                 </div>
             </div>
             <br>
+
+            @if (this.User.Identity.IsAuthenticated && this.User.IsInRole("Student"))
+            {
+                <div class="container">
+                    <div class="row ">
+                        <div class="form-group col-md-4 span6">
+                            <div class="col-md-8 mx-auto">
+                                <img src="@Url.Content(Model.PicturePath)" alt="Image" class="rounded embed-responsive" style="width: 200px; height: 200px; max-height: 100%; width: auto;" />
+                            </div>
+                        </div>
+                        <div class="form-group col-md-4 span6 align-self-center">
+                            <label asp-for="PictureFile" class="control-label"></label>
+                            <input asp-for="PictureFile" class="form-control" type="file" accept="image/*" />
+                            <span asp-validation-for="PictureFile" class="text-danger small"></span>
+                        </div>
+                    </div>
+                </div>
+                <br>
+            }
+
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 offset-md-2">
                         <div class="form-group text-center">
-                            <input type="submit" value="Register Student" class="btn btn-secondary" />
+                            <input type="submit" value="Update" class="btn btn-secondary" />
+                        </div>
+                        <div class="form-group text-center">
+                            <a asp-action="ChangePassword" class="nav-link text-dark">Change Password</a>
                         </div>
                         <div class="text-danger text-center mr-4" asp-validation-summary="ModelOnly"></div>
                     </div>
@@ -119,7 +131,7 @@
     </div>
 </div>
 <br>
-<div class="text-danger text-center">
+<div class="text-success text-center">
     <p>
         @Html.Raw(ViewBag.Message)
     </p>
@@ -129,13 +141,12 @@
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
     <script type="text/javascript">
-        if (document.getElementById("BirthDate").value === "01/01/0001 00:00:00") {
-            document.getElementById("BirthDate").value = "";
-        }
         $('.date').datepicker({
             format: 'dd/mm/yyyy',
             orientation: "bottom",
             autoclose: true
         });
+        let date = document.getElementById("BirthDate").value;
+        document.getElementById("BirthDate").value = date.split(' ')[0];
     </script>
 }
