--- a/SchoolWeb/Views/Account/ResetPassword.cshtml
+++ b/SchoolWeb/Views/Account/ResetPassword.cshtml
@@ -1,28 +1,24 @@
-﻿@model SchoolWeb.Models.ActivateAccountViewModel
+﻿@model SchoolWeb.Models.ResetPasswordViewModel
 @{
-    ViewData["Title"] = "Activate Account";
+    ViewData["Title"] = "Reset Password";
 }
 
 <br>
 <br>
-<h3 class="text-center">Activate Account</h3>
-<br>
-<br>
-<div class="col-md-4 offset-md-4 p-2 mb-2 bg-success rounded text-white text-center">
-    <p  class="my-auto">
-        @Html.Raw(ViewBag.MessageEmail)
-    </p>
-</div>
-<br>
-<br>
-<h3 class="text-center">Change Password</h3>
+<h3 class="text-center">Reset Password</h3>
 <br>
 <br>
 <div class="row">
     <div class="col-md-4 offset-md-4">
         <form method="post">
+            <input type="hidden" asp-for="Token" />
             <div class="form-group">
-                <label asp-for="Password">Password</label>
+                <label asp-for="UserName">Email</label>
+                <input asp-for="UserName" class="form-control" />
+                <span asp-validation-for="UserName" class="text-danger small"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password">New password</label>
                 <input asp-for="Password" type="password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger small"></span>
             </div>
@@ -33,16 +29,16 @@
             </div>
             <br>
             <div class="form-group text-center">
-                <input type="submit" value="Submit" class="btn btn-secondary" />
+                <input type="submit" value="Reset Password" class="btn btn-secondary" />
             </div>
             <div class="text-danger text-center mr-4" asp-validation-summary="ModelOnly"></div>
         </form>
+        <div class="text-danger text-center">
+            <p>
+                @Html.Raw(ViewBag.Message)
+            </p>
+        </div>
     </div>
-</div>
-<div class="text-danger text-center">
-    <p>
-        @Html.Raw(ViewBag.Message)
-    </p>
 </div>
 
 @section Scripts {
