--- a/SchoolWeb/Views/Account/EditProfile.cshtml
+++ b/SchoolWeb/Views/Account/EditProfile.cshtml
@@ -7,25 +7,45 @@
 <br>
 <h3 class="text-center">Edit Profile</h3>
 <br>
+<div class="text-success text-center">
+    <p>
+        @Html.Raw(ViewBag.Message)
+    </p>
+</div>
 <br>
 <div class="row">
     <div class="col-md-12 offset-md-2">
-        <div class="container">
-            <div class="row ">
-                <div class="form-group col-md-4 span6">
-                    <div class="col-md-8 mx-auto">
-                        <img src="@Url.Content(Model.ProfilePicturePath)" alt="Image" class="rounded-circle embed-responsive" style="width: 160px; height: 160px; max-height: 100%; width: auto;" />
+        <form method="post" enctype="multipart/form-data">
+            <div class="container">
+                <div class="row">
+                    <div class="form-group col-md-4 span6">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <img src="@Url.Content(Model.ProfilePicturePath)" alt="Image" class="rounded-circle embed-responsive" style="width: 160px; height: 160px; max-height: 100%; width: auto;" />
+                            </div>
+                            <br>
+                            <div class="row justify-content-center">
+                                <div class="form-group align-self-baseline">
+                                    <input asp-for="ProfilePictureFile" class="form-control" type="file" accept="image/*" style="color: transparent; width: 6.4rem;" />
+                                    <span asp-validation-for="ProfilePictureFile" class="text-danger small"></span>
+                                </div>
+                            </div>
+                            <div class="row justify-content-center">
+                                <div class="form-check align-self-baseline">
+                                    <input asp-for="RemoveProfilePicture" type="checkbox" class="form-check-input" />
+                                    <label asp-for="RemoveProfilePicture" class="form-check-label">Remove</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group col-md-4 span6 align-self-center">
+                        <h4 class="font-weight-normal">@Model.FirstName @Model.LastName</h4>
+                        <h6 class="font-weight-light">@Model.Email</h6>
+                        <h6 class="font-weight-light text-uppercase">@Model.Role</h6>
                     </div>
                 </div>
-                <div class="form-group col-md-4 span6 align-self-center">
-                    <h4 class="font-weight-normal">@Model.FirstName @Model.LastName</h4>
-                    <h6 class="font-weight-light">@Model.Email</h6>
-                    <h6 class="font-weight-light text-uppercase">@Model.Role</h6>
-                </div>
             </div>
-        </div>
-        <br>
-        <form method="post" enctype="multipart/form-data">
+            <br>
             <div class="container">
                 <div class="row">
                     <div class="form-group col-md-4 span6">
@@ -86,28 +106,26 @@
                         <input asp-for="PhoneNumber" class="form-control" />
                         <span asp-validation-for="PhoneNumber" class="text-danger small"></span>
                     </div>
-                    <div class="form-group col-md-4 span6">
-                        <label asp-for="ProfilePictureFile" class="control-label"></label>
-                        <input asp-for="ProfilePictureFile" class="form-control" type="file" accept="image/*" />
-                        <span asp-validation-for="ProfilePictureFile" class="text-danger small"></span>
-                    </div>
+
+                    @if (this.User.Identity.IsAuthenticated && this.User.IsInRole("Student"))
+                    {
+                        <div class="form-group col-md-4 span6">
+                            <label asp-for="PictureFile" class="control-label"></label>
+                            <input asp-for="PictureFile" class="form-control" type="file" accept="image/*" />
+                            <span asp-validation-for="PictureFile" class="text-danger small"></span>
+                        </div>
+                    }
+
                 </div>
             </div>
             <br>
 
             @if (this.User.Identity.IsAuthenticated && this.User.IsInRole("Student"))
             {
-                <div class="container">
-                    <div class="row ">
-                        <div class="form-group col-md-4 span6">
-                            <div class="col-md-8 mx-auto">
-                                <img src="@Url.Content(Model.PicturePath)" alt="Image" class="rounded embed-responsive" style="width: 200px; height: 200px; max-height: 100%; width: auto;" />
-                            </div>
-                        </div>
-                        <div class="form-group col-md-4 span6 align-self-center">
-                            <label asp-for="PictureFile" class="control-label"></label>
-                            <input asp-for="PictureFile" class="form-control" type="file" accept="image/*" />
-                            <span asp-validation-for="PictureFile" class="text-danger small"></span>
+                <div class="form-group col-md-8">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <img src="@Url.Content(Model.PicturePath)" alt="Image" class="rounded embed-responsive" style="width: 250px; height: 250px; max-height: 100%; width: auto;" />
                         </div>
                     </div>
                 </div>
@@ -129,12 +147,6 @@
             </div>
         </form>
     </div>
-</div>
-<br>
-<div class="text-success text-center">
-    <p>
-        @Html.Raw(ViewBag.Message)
-    </p>
 </div>
 
 @section Scripts {
