--- a/SchoolWeb/Views/Account/NotAuthorized.cshtml
+++ b/SchoolWeb/Views/Account/NotAuthorized.cshtml
@@ -4,7 +4,7 @@
 
 <br>
 <br>
-<h3 class="text-center">Not Authorized</h3>
+<h3 class="text-center text-danger">Not Authorized</h3>
 <br>
 <div>
     <p class="text-center">Access forbidden</p>
