--- a/SchoolWeb/Views/Errors/Error404.cshtml
+++ b/SchoolWeb/Views/Errors/Error404.cshtml
@@ -4,7 +4,7 @@
 
 <br>
 <br>
-<h3 class="text-center">Error 404</h3>
+<h3 class="text-center text-danger">Error 404</h3>
 <br>
 <div>
     <p class="text-center">Page not found</p>
