--- a/SchoolWeb/Views/Shared/Error.cshtml
+++ b/SchoolWeb/Views/Shared/Error.cshtml
@@ -7,7 +7,7 @@
 {
     <br>
     <br>
-    <h3 class="text-center">Error</h3>
+    <h3 class="text-center text-danger">Error</h3>
     <br>
     <div>
         <p class="text-center">An error occurred while processing your request</p>
