Admin edit and delete users, datatables and font-awesome

--- a/SchoolWeb/Views/Shared/_Layout.cshtml
+++ b/SchoolWeb/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] &nbsp|&nbsp SchoolWeb</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/bootstrap-datepicker/css/bootstrap-datepicker.min.css" />
+    <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
@@ -30,7 +31,7 @@
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Users</a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="RegisterUser">Register</a></li>
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="EditUser">Edit</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="EditUsers">Edit</a></li>
                                 </ul>
                             </li>
                         }
