--- a/SchoolWeb/Views/Account/ChangePassword.cshtml
+++ b/SchoolWeb/Views/Account/ChangePassword.cshtml
@@ -30,7 +30,7 @@
             <div class="form-group text-center">
                 <input type="submit" value="Change Password" class="btn btn-secondary" />
             </div>
-            <div class="form-group text-center">
+            <div class="col-md-4 offset-md-4 nav-item text-center">
                 <a asp-action="EditProfile" class="nav-link text-dark">Back</a>
             </div>
             <div class="text-danger text-center mr-4" asp-validation-summary="ModelOnly"></div>
