--- a/SchoolWeb/Views/Account/EditProfile.cshtml
+++ b/SchoolWeb/Views/Account/EditProfile.cshtml
@@ -16,6 +16,7 @@
 <div class="row">
     <div class="col-md-12 offset-md-2">
         <form method="post" enctype="multipart/form-data">
+            <input type="hidden" asp-for="UserId" />
             <div class="container">
                 <div class="row">
                     <div class="form-group col-md-4 span6">
@@ -138,7 +139,7 @@
                         <div class="form-group text-center">
                             <input type="submit" value="Update" class="btn btn-secondary" />
                         </div>
-                        <div class="form-group text-center">
+                        <div class="col-md-8 offset-md-2 nav-item text-center">
                             <a asp-action="ChangePassword" class="nav-link text-dark">Change Password</a>
                         </div>
                         <div class="text-danger text-center mr-4" asp-validation-summary="ModelOnly"></div>
