--- a/SchoolWeb/Views/Account/Login.cshtml
+++ b/SchoolWeb/Views/Account/Login.cshtml
@@ -31,7 +31,7 @@
             <div class="form-group text-center">
                 <input type="submit" value="Login" class="btn btn-secondary" />
             </div>
-            <div class="form-group text-center">
+            <div class="col-md-8 offset-md-2 nav-item text-center">
                 <a asp-action="RecoverPassword" class="nav-link text-dark">Forgot password?</a>
             </div>
             <div class="text-danger text-center mr-4" asp-validation-summary="ModelOnly"></div>
