--- a/SchoolWeb/Views/Accounts/ChangePassword.cshtml
+++ b/SchoolWeb/Views/Accounts/ChangePassword.cshtml
@@ -31,7 +31,7 @@
                 <input type="submit" value="Change Password" class="btn btn-secondary" />
             </div>
             <div class="col-md-4 offset-md-4 nav-item text-center">
-                <a asp-action="EditProfile" class="nav-link text-dark">Back</a>
+                <a asp-controller="Users" asp-action="EditOwnProfile" class="nav-link text-dark">Back</a>
             </div>
             <div class="text-danger text-center mr-4" asp-validation-summary="ModelOnly"></div>
         </form>
