Improve reports, add configurations and tune UI

--- a/SchoolWeb/Views/Accounts/ChangePassword.cshtml
+++ b/SchoolWeb/Views/Accounts/ChangePassword.cshtml
@@ -13,17 +13,17 @@
         <form method="post">
             <div class="form-group">
                 <label asp-for="OldPassword">Current Password</label>
-                <input asp-for="OldPassword" type="password" class="form-control" />
+                <input asp-for="OldPassword" type="password" class="form-control bg-light" />
                 <span asp-validation-for="OldPassword" class="text-danger small"></span>
             </div>
             <div class="form-group">
                 <label asp-for="NewPassword">New Password</label>
-                <input asp-for="NewPassword" type="password" class="form-control" />
+                <input asp-for="NewPassword" type="password" class="form-control bg-light" />
                 <span asp-validation-for="NewPassword" class="text-danger small"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Confirm">Confirm</label>
-                <input asp-for="Confirm" type="password" class="form-control" />
+                <input asp-for="Confirm" type="password" class="form-control bg-light" />
                 <span asp-validation-for="Confirm" class="text-danger small"></span>
             </div>
             <br>
