--- a/SchoolWeb/Views/Reports/AdminIndexReports.cshtml
+++ b/SchoolWeb/Views/Reports/AdminIndexReports.cshtml
@@ -114,7 +114,7 @@
                     "orderable": false,
                     "searchable": false
                 }],
-                order: [[1, 'desc']]
+                order: [[4, 'asc']]
             });
         });
     </script>
