--- a/SchoolWeb/Views/Reports/StaffIndexReports.cshtml
+++ b/SchoolWeb/Views/Reports/StaffIndexReports.cshtml
@@ -118,7 +118,7 @@
                     "orderable": false,
                     "searchable": false
                 }],
-                order: [[1, 'desc']]
+                order: [[4, 'asc']]
             });
         });
     </script>
