--- a/SchoolWeb/Views/Accounts/ActivateAccount.cshtml
+++ b/SchoolWeb/Views/Accounts/ActivateAccount.cshtml
@@ -23,12 +23,12 @@
         <form method="post">
             <div class="form-group">
                 <label asp-for="Password">Password</label>
-                <input asp-for="Password" type="password" class="form-control" />
+                <input asp-for="Password" type="password" class="form-control bg-light" />
                 <span asp-validation-for="Password" class="text-danger small"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Confirm">Confirm</label>
-                <input asp-for="Confirm" type="password" class="form-control" />
+                <input asp-for="Confirm" type="password" class="form-control bg-light" />
                 <span asp-validation-for="Confirm" class="text-danger small"></span>
             </div>
             <br>
