--- a/SchoolWeb/Views/Accounts/Login.cshtml
+++ b/SchoolWeb/Views/Accounts/Login.cshtml
@@ -13,12 +13,12 @@
         <form method="post">
             <div class="form-group">
                 <label asp-for="Username">Username</label>
-                <input asp-for="Username" class="form-control" />
+                <input asp-for="Username" class="form-control bg-light" />
                 <span asp-validation-for="Username" class="text-danger small"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Password">Password</label>
-                <input asp-for="Password" type="password" class="form-control" />
+                <input asp-for="Password" type="password" class="form-control bg-light" />
                 <span asp-validation-for="Password" class="text-danger small"></span>
             </div>
             <div class="form-group text-center">
