--- a/SchoolWeb/Views/Accounts/RecoverPassword.cshtml
+++ b/SchoolWeb/Views/Accounts/RecoverPassword.cshtml
@@ -13,7 +13,7 @@
         <form method="post">
             <div class="form-group">
                 <label asp-for="Email">Email</label>
-                <input asp-for="Email" class="form-control" />
+                <input asp-for="Email" class="form-control bg-light" />
                 <span asp-validation-for="Email" class="text-danger small"></span>
             </div>
             <br>
