--- a/SchoolWeb/Views/Accounts/ResetPassword.cshtml
+++ b/SchoolWeb/Views/Accounts/ResetPassword.cshtml
@@ -14,17 +14,17 @@
             <input type="hidden" asp-for="Token" />
             <div class="form-group">
                 <label asp-for="UserName">Email</label>
-                <input asp-for="UserName" class="form-control" />
+                <input asp-for="UserName" class="form-control bg-light" />
                 <span asp-validation-for="UserName" class="text-danger small"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Password">New password</label>
-                <input asp-for="Password" type="password" class="form-control" />
+                <input asp-for="Password" type="password" class="form-control bg-light" />
                 <span asp-validation-for="Password" class="text-danger small"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Confirm">Confirm</label>
-                <input asp-for="Confirm" type="password" class="form-control" />
+                <input asp-for="Confirm" type="password" class="form-control bg-light" />
                 <span asp-validation-for="Confirm" class="text-danger small"></span>
             </div>
             <br>
