--- a/SchoolWeb/Views/Shared/_Layout.cshtml
+++ b/SchoolWeb/Views/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-controller="Reports" asp-action="AdminIndexReports">Reports</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Configurations">Configs</a>
+                            </li>
                         }
 
                         @if (this.User.Identity.IsAuthenticated && this.User.IsInRole("Staff"))
