--- a/SchoolWeb/Views/Users/EditUserProfile.cshtml
+++ b/SchoolWeb/Views/Users/EditUserProfile.cshtml
@@ -51,12 +51,12 @@
                 <div class="row">
                     <div class="form-group col-md-4">
                         <label asp-for="FirstName">First Name</label>
-                        <input asp-for="FirstName" class="form-control" />
+                        <input asp-for="FirstName" class="form-control bg-light" />
                         <span asp-validation-for="FirstName" class="text-danger small"></span>
                     </div>
                     <div class="form-group col-md-4">
                         <label asp-for="LastName">Last Name</label>
-                        <input asp-for="LastName" class="form-control" />
+                        <input asp-for="LastName" class="form-control bg-light" />
                         <span asp-validation-for="LastName" class="text-danger small"></span>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="form-group col-md-4">
                         <label asp-for="CcNumber">CC Number</label>
-                        <input asp-for="CcNumber" class="form-control" />
+                        <input asp-for="CcNumber" class="form-control bg-light" />
                         <span asp-validation-for="CcNumber" class="text-danger small"></span>
                     </div>
                     <div class="form-group col-md-4">
@@ -92,19 +92,19 @@
                 <div class="row">
                     <div class="form-group col-md-4">
                         <label asp-for="Address">Address</label>
-                        <input asp-for="Address" class="form-control" />
+                        <input asp-for="Address" class="form-control bg-light" />
                         <span asp-validation-for="Address" class="text-danger small"></span>
                     </div>
                     <div class="form-group col-md-4">
                         <label asp-for="City">City</label>
-                        <input asp-for="City" class="form-control" />
+                        <input asp-for="City" class="form-control bg-light" />
                         <span asp-validation-for="City" class="text-danger small"></span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-md-4">
                         <label asp-for="PhoneNumber">Phone Number</label>
-                        <input asp-for="PhoneNumber" class="form-control" />
+                        <input asp-for="PhoneNumber" class="form-control bg-light" />
                         <span asp-validation-for="PhoneNumber" class="text-danger small"></span>
                     </div>
 
