--- a/SchoolWeb/Views/Users/RegisterStudent.cshtml
+++ b/SchoolWeb/Views/Users/RegisterStudent.cshtml
@@ -20,12 +20,12 @@
                 <div class="row">
                     <div class="form-group col-md-4">
                         <label asp-for="FirstName">First Name</label>
-                        <input asp-for="FirstName" class="form-control" />
+                        <input asp-for="FirstName" class="form-control bg-light" />
                         <span asp-validation-for="FirstName" class="text-danger small"></span>
                     </div>
                     <div class="form-group col-md-4">
                         <label asp-for="LastName">Last Name</label>
-                        <input asp-for="LastName" class="form-control" />
+                        <input asp-for="LastName" class="form-control bg-light" />
                         <span asp-validation-for="LastName" class="text-danger small"></span>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                 <div class="row">
                     <div class="form-group col-md-4">
                         <label asp-for="CcNumber">CC Number</label>
-                        <input asp-for="CcNumber" class="form-control" />
+                        <input asp-for="CcNumber" class="form-control bg-light" />
                         <span asp-validation-for="CcNumber" class="text-danger small"></span>
                     </div>
                     <div class="form-group col-md-4">
@@ -61,36 +61,36 @@
                 <div class="row">
                     <div class="form-group col-md-4">
                         <label asp-for="Address">Address</label>
-                        <input asp-for="Address" class="form-control" />
+                        <input asp-for="Address" class="form-control bg-light" />
                         <span asp-validation-for="Address" class="text-danger small"></span>
                     </div>
                     <div class="form-group col-md-4">
                         <label asp-for="City">City</label>
-                        <input asp-for="City" class="form-control" />
+                        <input asp-for="City" class="form-control bg-light" />
                         <span asp-validation-for="City" class="text-danger small"></span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-md-4">
                         <label asp-for="PhoneNumber">Phone Number</label>
-                        <input asp-for="PhoneNumber" class="form-control" />
+                        <input asp-for="PhoneNumber" class="form-control bg-light" />
                         <span asp-validation-for="PhoneNumber" class="text-danger small"></span>
                     </div>
                     <div class="form-group col-md-4">
                         <label asp-for="Email">Email</label>
-                        <input asp-for="Email" class="form-control" />
+                        <input asp-for="Email" class="form-control bg-light" />
                         <span asp-validation-for="Email" class="text-danger small"></span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-md-4">
                         <label asp-for="Password">Password</label>
-                        <input asp-for="Password" type="password" class="form-control" />
+                        <input asp-for="Password" type="password" class="form-control bg-light" />
                         <span asp-validation-for="Password" class="text-danger small"></span>
                     </div>
                     <div class="form-group col-md-4">
                         <label asp-for="Confirm">Confirm</label>
-                        <input asp-for="Confirm" type="password" class="form-control" />
+                        <input asp-for="Confirm" type="password" class="form-control bg-light" />
                         <span asp-validation-for="Confirm" class="text-danger small"></span>
                     </div>
                 </div>
